[tool.poetry]
name = "EpivizQuadIndex"
version = "0.1.0"
description = ""
authors = ["Jayaram Kancherla <jayaram.kancherla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
shapely = "^1.7.0"
epivizfileserver = "^0.1.5"
pandas = "^1.0.4"
hilbertcurve = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
